# chsmv

./: .clang-format  CMakeLists.txt  README.md
include/: chsmv.h
src/: CMakeLists.txt  board.cc  board.h  chsmv.cc  engine.cc  engine.h  move.cc  move.h  piece.cc  piece.h  square.cc  square.h
src/pieces/: bishop.cc  bishop.h  king.cc  king.h  knight.cc  knight.h  pawn.cc  pawn.h  queen.cc  queen.h  rook.cc  rook.h
tests/: CMakeLists.txt  board-test.cc  board_test.cc  engine-test.cc  move-test.cc  square-test.cc  test.cc
